<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Art Camera Pro</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="camera_alert">Your device has only one camera</string>
    <string name="bt_pointillize">Pointillize</string>
    <string name="bt_warm_vintage">Warm Vinage</string>
    <string name="bt_cold_vintage">Cold Vintage</string>
    <string name="bt_invert">Negative</string>
    <string name="bt_original">Original</string>
    <string name="bt_gray_scale">Black &amp; Write</string>
    <string name="bt_gain">Gain Color</string>
    <string name="bt_threshold_1950">1950s</string>
    <string name="tvCont">Contrast</string>
    <string name="tvBright">Contrast</string>
    <string name="bt_dissolve">Dissolve</string>
    <string name="bt_emboss_1">Emboss 1</string>
    <string name="bt_emboss_2">Emboss 2</string>
    <string name="bt_contour">Contour</string>
    <string name="bt_edge">Edge</string>
    <string name="bt_diffuse">Diffuse</string>
    <string name="bt_noise">Noise</string>
    <string name="bt_oil">Oil</string>
    <string name="bt_yuno_funny">Yuno</string>
	<string name="bt_no_funny">No</string>
	<string name="bt_isee_funny">I see</string>
	<string name="bt_milk_funny">Milk</string>
	<string name="bt_serious_funny">Serious</string>
	<string name="bt_sweat_funny">Sweat</string>
	<string name="bt_overjoyed_funny">Over Joyed</string>
	<string name="bt_perfect_funny">Perfect</string>
	<string name="bt_happy_funny">Happy</string>
	<string name="bt_fts_funny">F**k that sh*t</string>
	<string name="bt_lol_funny">LOL</string>
	<string name="bt_pft_funny">Pft lulz</string>
	<string name="bt_troll_funny">Troll</string>
	<string name="bt_cry_funny">Cry</string>
	<string name="bt_fa_funny">Forever Alone</string>
	<string name="bt_fap_funny">Fap fap</string>
	<string name="bt_fuu_funny">Fuu...</string>
	<string name="bt_gusta_mucho_funny">Gusta Mucho</string>
	<string name="bt_kiddingme_funny">Kidding me</string>
	<string name="bt_okay_funny">Okay</string>
	<string name="bt_sadtroll_funny">Sad Troll</string>
	<string name="bt_levels">Levels</string>
	<string name="bt_posterize">Posterize</string>
</resources>
